--- a/gangneung_olympic_coffee/src/main/webapp/design.html
+++ b/gangneung_olympic_coffee/src/main/webapp/design.html
@@ -5,95 +5,79 @@
 <title>디자인 설계</title>
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <style type="text/css">
-	.brown-background{
-		background: #f2e6d9;
-	}
-	.brown{
-		color: #996633;
-	}
-	.blue-background{
-		background: #f0f0f5;
-	}
-	.blue{
-		color: #666699;
-	}
-/* 	.green-background{ */
-/* 		background: #daffda; */
-/* 	} */
-/* 	.green{ */
-/* 		color: #009933; */
-/* 	} */
-	.radius{
-		border-width: 3px;
-		border-color: white;
-	}
-	.radius:hover{
-		background-color:white;
-		color:black;
-	}
-	
+.brown-background {
+	background: #f2e6d9;
+}
 
+.brown {
+	color: #996633;
+}
+
+.blue-background {
+	background: #f0f0f5;
+}
+
+.blue {
+	color: #666699;
+}
+/*  	.green-background{ 
+ 		background: #daffda; 
+	} 
+	.green{ 
+		color: #009933; 
+	} */
+.radius {
+	border-width: 3px;
+	border-color: white;
+}
+
+.radius:hover {
+	background-color: white;
+	color: black;
+}
 </style>
 </head>
 <body>
-<!-- 	<div class="col-xs-10 col-sm-6 col-md-5 col-lg-4 green-background"> -->
-<!-- 	<h1 class="">안녕하세요</h1> -->
-<!-- 	<h3 class="">디자인 확인</h3> -->
-<!-- 	<form class="form-group green" role="form"> -->
-<!-- 		<input type="text" value="테스트 중입니다." class="form-control input-lg green"> <br> -->
-<!-- 		<input type="button" value="버튼1" class="btn btn-default green"> <br> -->
-<!-- 		<button class="btn btn-default green green-background radius">버튼2</button> -->
-<!-- 		<br> <input type="radio" class="green"> <br> -->
-<!-- 		<div class="green"></div> -->
-<!-- 		<br> <select class="form-control green"> -->
-<!-- 			<option>1</option> -->
-<!-- 			<option>2</option> -->
-<!-- 			<option>3</option> -->
-<!-- 			<option>4</option> -->
-<!-- 		</select> -->
-<!-- 		<textarea rows="" cols=""> -->
-<!-- 		</textarea> -->
-<!-- 	</form> -->
-<!-- 	</div> -->
-<div class="container col-centered text-center">
-	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blue-background">
-	<h1 class="">안녕하세요</h1>
-	<h3 class="">디자인 확인</h3>
-	<form class="form-group blue" role="form">
-		<input type="text" value="테스트 중입니다." class="form-control input-lg blue"> <br>
-		<input type="button" value="버튼1" class="btn btn-default blue"> <br>
-		<button class="btn btn-default blue blue-background radius">버튼2</button>
-		<br> <input type="radio" class="blue"> <br>
-		<div class="blue"></div>
-		<br> <select class="form-control blue">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-		</select>
-		<textarea rows="" cols="">
-		</textarea>
-	</form>
+	<div class="container col-centered text-center">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blue-background">
+			<h1 class="">안녕하세요</h1>
+			<h3 class="">디자인 확인</h3>
+			<form class="form-group blue" role="form">
+				<input type="text" value="테스트 중입니다."
+					class="form-control input-lg blue"> <br> <input
+					type="button" value="버튼1" class="btn btn-default blue"> <br>
+				<button class="btn btn-default blue blue-background radius">버튼2</button>
+				<br> <input type="radio" class="blue"> <br>
+				<div class="blue"></div>
+				<br> <select class="form-control blue">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+				</select>
+				<textarea rows="" cols=""></textarea>
+			</form>
+		</div>
 	</div>
-</div>
 	<div class="col-xs-10 col-sm-6 col-md-5 col-lg-4 brown-background">
-	<h1 class="">안녕하세요</h1>
-	<h3 class="">디자인 확인</h3>
-	<form class="form-group brown" role="form">
-		<input type="text" value="테스트 중입니다." class="form-control input-lg brown"> <br>
-		<input type="button" value="버튼1" class="btn btn-default brown"> <br>
-		<button class="btn btn-default brown brown-background radius">버튼2</button>
-		<br> <input type="radio" class="brown"> <br>
-		<div class="brown"></div>
-		<br> <select class="form-control brown">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-		</select>
-		<textarea rows="" cols="">
+		<h1 class="">안녕하세요</h1>
+		<h3 class="">디자인 확인</h3>
+		<form class="form-group brown" role="form">
+			<input type="text" value="테스트 중입니다."
+				class="form-control input-lg brown"> <br> <input
+				type="button" value="버튼1" class="btn btn-default brown"> <br>
+			<button class="btn btn-default brown brown-background radius">버튼2</button>
+			<br> <input type="radio" class="brown"> <br>
+			<div class="brown"></div>
+			<br> <select class="form-control brown">
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+			</select>
+			<textarea rows="" cols="">
 		</textarea>
-	</form>
+		</form>
 	</div>
 </body>
 </html>
