--- a/gangneung_olympic_coffee/src/main/webapp/index.html
+++ b/gangneung_olympic_coffee/src/main/webapp/index.html
@@ -65,7 +65,7 @@
 
     <!-- About -->
     <section id="about" class="about">
-      <div class="container text-center">
+      <div class="container">
         <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
         <p class="lead">This theme features some wonderful photography courtesy of
           <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
